app/routes/events/components/EventEditor/EventEditor.css
@import '../Event.css';

.fieldShadow {
  box-shadow: 0 0 10px var(--color-dark-gray-1);
}

.title {
  font-size: 24px;
  color: var(--lego-font-color);
  font-family: Raleway, 'Helvetica Neue', Arial, sans-serif;
  font-weight: 700;
}

.editors {
  border: 1px solid var(--color-light-gray-1);
  border-radius: 3px;
  padding: 10px;
}

.descriptionEditor {
  background: inherit;
}

html[data-theme='dark'] .descriptionEditor {
  color: var(--lego-font-color);
}

.formField {
  padding: 1px;
  padding-left: 5px;
}

.registrationDeadlineHours {
  font-size: 100%;
  margin: 0;
  font-style: italic;
}

.metaField {
  margin-bottom: 0;
}

.metaField input {
  padding-bottom: 5px;
  padding-top: 5px;
}

.metaList {
  display: flex;
  align-items: center;
}

.metaList > span {
  display: flex;
}

.poolHeader {
  text-align: center;
}

.poolBox {
  background: rgba(200, 200, 200, 50%);
  padding: 10px;
  margin-top: 10px;
}

[data-theme='dark'] .poolBox {
  background: rgba(50, 50, 50, 50%);
}

.centeredButton {
  display: flex;
  justify-content: center;
  margin-top: 10px;
}

.subSection {
  margin-left: 10px;
  border-left: 4px solid var(--lego-red);
  padding: 0 0 10px 10px;
}

